# artifastring

./: .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.am  README  SConscript  SConstruct  TODO  artifastring.pc.in  autogen.sh  configure.ac  interactive-artifastring.py  main_page.doxy  make-release.sh  monowav.i  monowav.pc.in  play-file.py  play-interactive.py  simple.cpp  violin_constants.h  violin_instrument.cpp  violin_instrument.h  violin_string.cpp  violin_string.h  visualize.plot
actions/: CRAPL-LICENSE.txt  SConscript  ViolinPhysical.py  benchmark.py  bow-cello-strings.actions  bow-viola-strings.actions  bow-violin-strings.actions  notes2actions.py  pluck-cello-strings.actions  pluck-strings.actions  pluck-viola-strings.actions  pluck-violin-strings.actions  plucks.sh  twinkle.notes  unit.py
artifastring/: actions_file.cpp  actions_file.h  artifastring_constants.h  artifastring_defines.h  artifastring_instrument.cpp  artifastring_instrument.h  artifastring_string.cpp  artifastring_string.h  cello_a_modes.h  cello_c_modes.h  cello_d_modes.h  cello_g_modes.h  decimate.cpp  decimate.h  fft_convolution.cpp  fft_convolution.h  midi_pos.cpp  midi_pos.h  monowav.cpp  monowav.h  violin_a_modes.h  violin_body_impulse.h  violin_constants.h  violin_d_modes.h  violin_e_modes.h  violin_g_modes.h  violin_instrument.cpp  violin_instrument.h  violin_string.cpp  violin_string.h
artifastring/constants/: body_cello_1.h  body_cello_2.h  body_viola_1.h  body_viola_2.h  body_viola_3.h  body_viola_4.h  body_violin_1.h  body_violin_2.h  body_violin_3.h  body_violin_4.h  haptic_response_1.h  haptic_response_2.h  haptic_response_3.h  haptic_response_4.h  lowpass_1.h  lowpass_2.h  lowpass_3.h  lowpass_4.h  strings_cello.h  strings_viola.h  strings_violin.h
blender/: .gitignore  MAKING-A-MODEL.txt  Makefile  README  abstract_object.py  actions2images.in.py  animate-violin.py  artifastring-blender.py  artifastring-movie.py  artifastring-render.sh.in  artifastring_blender.py  artifastring_movie.py  blank.blend  bow.py  cameras.py  fast-violin.blend  finger.py  parse_actions.py  pluck.py  render_quality.py  setup-2.5.py  setup.py  shared.py  utils.py  violin-and-bow.blend  violin.py
doc/: Doxyfile  SConscript  doxyfile.in  main_page.doxy  simple.cpp
impulses/: impulse-describe.txt  make-impulses-h.sh  make-impulses.py
interactive/: .gitignore  Makefile  README-interactive.txt  artifastring_interactive.py  artifastring_osc.py  artifastring_play_interactive.py  artifastring_play_osc.py  artifastring_process.py  continuous_server.py  enum.py  mainwindow.py  mainwindow_gui.ui  osc.js  parameter_control.py  parameter_control_gui.ui  play-file.py  quality_judgements.py  tuning_pitch.py
interactive/ad-hoc-wifi/: hostapd.conf  start-hostapd.sh  start-ifconfig.sh
modes/: .gitignore  all-pluck.sh  all-segment.sh  harmonics_data.py  marsyas_interface.py  play-with-harmonics.py  plot-harmonics.py  pluck-detect.py  quick-b-check.py  segment-plucks.py
otherlibs/: import-eigen.sh
otherlibs/Eigen/: imported-project.txt
research/: README  benchmark.sh  bow-bad-demoucron.mac  bow-friction.mac  bow-multi-friction.mac  draw_string.py  friction-slipstate-bow-change.actions  hi-res-fft.py  mags.py  make-positions.py  quick-artifastring-test.py  visualize_string_debug.py
research/attic/: old-finger-r-quick-test.py
research/control-decays/: .gitignore  alsa_interface.py  comedi_interface.py  defs_measure.py  main.py  sine.py
research/distances/: dists.txt
research/experiments/: 0001-Experiment-with-polyphase-FIR-downsampling.patch  Makefile  quick-artifastring-test.py  timing-vectors.cpp  tuning-test.py
research/finger-R/: mags.py
research/impulses/: compare-freqs.py  make-complex-response.py  make-haptic-response.py  make-impulses.py  mere-lowpass.py  prepare-impulse-graphs.py  segment-impulses.py  test-filter.py  test-impulse-upsample.py
research/make-constants/: .gitignore  Makefile  available_instruments.py  cutoff.py  expected_frequencies.py  make-constants.py  sum_decay_power.py  test-consts.sh
research/mode-detect/: .gitignore  Makefile  adjust_B.py  adjust_decays.py  all-decays-glasgow.py  all-decays-no-multiprocessing.py  all-decays.py  all-estimate-B.py  all-harmonics-no-multiprocessing.py  all-harmonics-no-output.py  biology.py  calc_noise.py  chemistry.py  classes.py  decay_exponential.py  defs.py  estimate_f0_B.py  expected_frequencies.py  harmonics_data.py  initial-decays.py  make-test-audio.py  maxima-decays.mac  mode_decays.py  movie.sh  old_harmonics_data.py  partials.py  plot-harmonics.py  plots.py  pluck-detect.py  prepare-median-detected.py  quick-b-check.py  quick-cello-a.plot  quick-cello-c.plot  quick-cello-d.plot  quick-cello-g.plot  quick-plot-a.plot  quick-plot-d.plot  quick-plot-e.plot  quick-plot-g.plot  quick-viola-a.plot  (+13 more)
research/nick-modes/: bandpass-decay.py  detected-freqs.py  detected-modes.py  get-strauss.sh  long-fft.py  spectogram.py
research/numpy-string/: Makefile  bow-slips.py  constants.py  defs.py  driver.py  fingered-Rs.py  main.py  numpy_string.py  plots.py  pluck-Rs.py  profile.py  quick-string.plot  slips.py  test_changing_slipstate.py  test_slipstate.py  wav2png.plot
research/optimization/: README  pluck-0.actions  pluck-3.actions
research/plots/: README  bow-slipstates.py  bow-slipstates.txt  turn-off-computation.py
research/schelleng/: .gitignore  actual.py  better.py  check_slips.py  compare-quality.py  defs.py  multi_artifastring.py  schelleng.py
research/select-num-modes/: select-num-modes.py
research/shared/: dsp.py  partials.py  published_constants.py
src/: SConscript  actions2wav.cpp  monowav.cpp  monowav.h  violin_body_impulse.h  violin_constants.h  violin_instrument.cpp  violin_instrument.h  violin_string.cpp  violin_string.h
swig/: SConscript  actions_file.i  artifastring_instrument.i  midi_pos.i  monowav.i  violin_instrument.i
